--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //añadidos
     implementation 'androidx.biometric:biometric:1.0.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 
 }
